.gsd.migrating/exec/1f713a78-34f0-408f-ad26-f565e23a65c4.stderr
  File "<stdin>", line 7
    if 'CMT/' in line or 'CMT\' in line:
                         ^
SyntaxError: unterminated string literal (detected at line 7)
